# diffusion

./: .gitignore  README.md  REAP_proposal.md  RESULTS.md  plan.md  pyproject.toml  requirements.txt
configs/: first_integration_reap_forced.yaml  first_integration_rnd_forced.yaml  gate_mappo_cramped.yaml  h2_coma_counter.yaml  h2_coma_forced.yaml  h2_h4_manifest.yaml  h2_qmix_counter.yaml  h2_qmix_forced.yaml  h2h4_reap_counter.yaml  h4_count_counter.yaml  h4_count_forced.yaml  h4_rnd_counter.yaml  hardness_mappo_counter.yaml  hardness_mappo_forced.yaml  invariance_shaped_rnd_cramped.yaml  probe_mappo_rnd_cramped.yaml  sanity_coma_spread.yaml  sanity_qmix_spread.yaml  smoke_mappo_cramped.yaml  smoke_random_cramped.yaml
reap/: __init__.py  checkpoint.py  config.py  hybrid_teacher.py  metrics.py  seeding.py  teacher_pipeline.py  train.py
reports/: calibration_cramped.json  calibration_hybrid_cramped.json  calibration_hybrid_forced.json  distill_fidelity_cramped.json  distill_fidelity_feasibility_cramped.json  distill_fidelity_feasibility_hybrid_cramped.json  distill_fidelity_feasibility_hybrid_forced.json  distill_fidelity_hybrid_cramped.json  distill_fidelity_hybrid_forced.json  first_integration_forced.json  first_integration_forced.md  first_integration_forced_audit.md  gate_mappo_cramped.json  gate_mappo_cramped.md  hardness_mappo_counter.json  hardness_mappo_counter.md  hardness_mappo_forced.json  hardness_mappo_forced.md  invariance_rnd_cramped.json  invariance_rnd_cramped.md  potential_table_cramped.json  potential_table_hybrid_cramped.json  (+12 more)
tests/: chain_env.py  (+25 more)
(+42 files in other folders)
