[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reap"
version = "0.1.0"
description = "Reachability-estimated adaptive potentials for sparse-reward cooperative MARL"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<2",
    "torch>=2.1,<2.2",
    "pyyaml>=6.0",
    "overcooked_ai>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["reap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "overcooked: tests that require the overcooked_ai package and layout files",
]
